fix(FF-00): remove zero gap with empty content

--- a/packages/mobile-modal/src/components/MobileModal/styles.module.scss
+++ b/packages/mobile-modal/src/components/MobileModal/styles.module.scss
@@ -12,3 +12,7 @@
   flex: 0 1 auto;
   height: min-content;
 }
+
+.modalHeader {
+  margin-bottom: 24px;
+}
